petclinic-chart/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-postgresql-db
  namespace: petclinic
  labels:
    app: petclinic-db
spec:
  selector:
    matchLabels:
      app: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic-db
    spec:
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: petclinic-postgresql-pvc
      containers:
        - image: postgres:17
          name: postgresql
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-data
          ports:
            - containerPort: 5432
              name: postgresql
          livenessProbe:
            tcpSocket:
              port: postgresql
          readinessProbe:
            tcpSocket:
              port: postgresql
          startupProbe:
            tcpSocket:
              port: postgresql
