petclinic-chart/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-postgresql-svc
  namespace: petclinic
  labels:
    app: petclinic-db
spec:
  selector:
    app: petclinic-db
  ports:
    - protocol: TCP
      port: 5432
  type: ClusterIP
